Layout bug fix: Drupal node image fields overflow content

--- a/modules/ytp-assets-common/src/less/content.less
+++ b/modules/ytp-assets-common/src/less/content.less
@@ -209,6 +209,10 @@ h4 {
   }
 }
 
+.node .field.field-type-image img {
+  max-width: 100%;
+  height: auto !important;
+}
 
 #infobox {
   background-color: @block-color-background;
